--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.1.6",
-    "lucide-react": "^0.379.0",
-    "next": "14.2.20",
+    "lucide-react": "^0.468.0",
+    "next": "^15.1.2",
     "next-themes": "^0.4.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
