--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,3 +22,9 @@ updates:
           - "minor"
           - "patch"
     lockfile-update: true
+    # Añadir estas configuraciones
+    labels:
+      - "dependencies"
+      - "automerge"
+    pull-request-branch-name:
+      separator: "-"
