--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,9 +22,13 @@ updates:
           - "minor"
           - "patch"
     lockfile-update: true
-    # Añadir estas configuraciones
     labels:
       - "dependencies"
       - "automerge"
     pull-request-branch-name:
       separator: "-"
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major"]
+    reviewers:
+      - "${{github.repository_owner}}"
