--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
   "dependencies": {
     "@radix-ui/themes": "^3.2.1",
     "framer-motion": "^11.18.2",
-    "next": "^15.5.6",
     "lucide-react": "^0.553.0",
+    "next": "16.0.1",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.2.0"
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.33",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
