--- a/package.json
+++ b/package.json
@@ -4,32 +4,28 @@
   "private": false,
   "author": "Oscar Bustos - elchiconube",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "lint": "astro check",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.12",
     "@radix-ui/themes": "^3.2.1",
+    "astro": "^5.0.0",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.562.0",
-    "next": "16.1.1",
-    "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@astrojs/react": "^4.0.0",
     "@types/node": "^20",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2"
   }
 }
